# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  16 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Renamed restart in $svcdir to scheduled as it makes much more sense.

    Interfaces names with a dot in them now work.

  15 Jan 2005; Roy Marples <uberlord@gentoo.org>:

    Changed wording about network modules in /etc/modules.autoload.d/*,
    #118419.

  14 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Changed runscript.sh to store it's services to restart like rc.

* baselayout-1.12.0_pre14 (13 Jan 2006)

  13 Jan 2006; Mike Frysinger <vapier@gentoo.org>:

    Filter all of fuse as network based since there's no way for us to know
    if the thing is local or not #118552 by Pete Ezzo.'

  13 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Added warning to modules.autoload.d files stating that it's a bad idea
    to put modules there that trigger hotplug events which in turn start
    services, #118419.

    Services that need a service which is inactive at boot are now scheduled
    to start when the inactive service starts, #118801.

  12 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Interactive start is now controllable by RC_INTERACTIVE="yes" and will
    probe to see if we can go interactive.

  11 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now traps interrupt signals and rolls back its status to what
    it was when before it started.

    bonding module now supports space seperated and array variables, #118590.

    start-stop-daemon now waits for upto 1 second if it returns 0 and we
    don't have a valid process.

    A more user friendly message is reported when an interface does not exist.

  10 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Removed runlevel dependancies from runscript.sh as they're now in rc.
    
    runscript.sh now has much better locking, #118418.
