@@ -16,7 +16,7 @@ depend() {
 
 	# Load any custom depend functions for the given interface
 	# For example, br0 may need eth0 and eth1
-	local iface="${myservice##*.}"
+	local iface="${myservice#*.}"
 	[[ $(type -t "depend_${iface}") == "function" ]] && depend_${iface}
 
 	return 0
@@ -24,9 +24,6 @@ depend() {
 
 # Define where our modules are
 MODULES_DIR="${svclib}/net.modules.d"
-
-# Some defaults
-background="${background:-no}"
 
 # Load some functions shared between ourselves and our dhcp helpers
 source "${MODULES_DIR}/helpers.d/functions"
@@ -855,11 +852,8 @@ run() {
 	local -a MODULES mods
 	local IN_BACKGROUND="${IN_BACKGROUND}"
 
-	# No point in backgrounding if we're already there ...
-	# This is also required so we can select the "best" interface
 	if [[ ${IN_BACKGROUND} == "true" || ${IN_BACKGROUND} == "1" ]]; then
 		IN_BACKGROUND=true
-		background=false
 	else
 		IN_BACKGROUND=false
 	fi
