@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  18 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Services should not get stuck in rc anymore, #119242.
+
   16 Jan 2006; Roy Marples <uberlord@gentoo.org>:
 
     Renamed restart in $svcdir to scheduled as it makes much more sense.
